<resources>
    <string name="app_name">Tic Tac Toe</string>

    <string name="game_title">Tic Tac Toe</string>
    <string name="enter_name">Enter Player Names</string>
    <string name="enter_name_1">Enter Player 1 Name</string>
    <string name="enter_name_2">Enter Player 2 Name</string>
    <string name="standing_title">Leaderboard</string>
    <string name="save_name">Save</string>
    <string name="Player1_name">Player 1 (AI)</string>
    <string name="Player2_name">Player 2 (AI)</string>
    <string name="Win_title">W:</string>
    <string name="Draw_title">D:</string>
    <string name="Lose_title">L:</string>
    <string name="P1_Win_count">0</string>
    <string name="P2_Win_count">0</string>
    <string name="P1_Draw_count">0</string>
    <string name="P2_Draw_count">0</string>
    <string name="P1_Lose_count">0</string>
    <string name="P2_Lose_count">0</string>

    <string name="dialog_msg">Play Again?</string>
    <string name="dialog_start_btn">Start Again</string>
    <string name="dialog_back_to_menu">Back to Menu</string>
    <string name="dialog_greeting">Bonjour!</string>
    <string name="dialog_insane_mode_switch">INSANE mode??</string>
    <string name="diaglog_greeting_start">Start!</string>


</resources>