<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myGrey"
    tools:context=".PlayGameActivity">

    <!-- Player 1 info -->
    <LinearLayout
        android:layout_above="@id/ID_playboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:id="@+id/ID_P1_player_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/player_border">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/cross"
                android:layout_marginStart="30dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left">


                <TextView
                    android:id="@+id/ID_P1_name_inGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Player1_name"
                    android:textColor="@color/myBlack"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="10dp"/>


                <!-- Player 1 Bottom level -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Win_title"
                        android:textColor="@color/myBlack"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:id="@+id/ID_P1_Win_inGame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/P1_Win_count"
                        android:textColor="@color/myBlack"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Draw_title"
                        android:textColor="@color/myBlack"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:id="@+id/ID_P1_Draw_inGame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/P1_Draw_count"
                        android:textColor="@color/myBlack"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="25dp"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!-- Play board -->
    <GridLayout
        android:id="@+id/ID_playboard"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/playboard_base"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">


        <ImageView
            android:id="@+id/ID_Box1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:background="@drawable/playboard_square"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:tag="1,1"/>

        <ImageView
            android:id="@+id/ID_Box2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:background="@drawable/playboard_square"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:tag="1,2"/>

        <ImageView
            android:id="@+id/ID_Box3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:background="@drawable/playboard_square"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:padding="20dp"
            android:tag="1,3"/>


        <ImageView
            android:id="@+id/ID_Box4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:background="@drawable/playboard_square"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:tag="2,1"/>

        <ImageView
            android:id="@+id/ID_Box5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:background="@drawable/playboard_square"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:tag="2,2"/>

        <ImageView
            android:id="@+id/ID_Box6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:background="@drawable/playboard_square"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:padding="20dp"
            android:tag="2,3"/>

        <ImageView
            android:id="@+id/ID_Box7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:background="@drawable/playboard_square"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            android:tag="3,1"/>

        <ImageView
            android:id="@+id/ID_Box8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:background="@drawable/playboard_square"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            android:tag="3,2"/>

        <ImageView
            android:id="@+id/ID_Box9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:scaleType="fitXY"
            android:background="@drawable/playboard_square"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:padding="20dp"
            android:tag="3,3"/>




    </GridLayout>


    <!-- Player 2 info -->
    <LinearLayout
        android:layout_below="@id/ID_playboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/ID_P2_player_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/player_no_border">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/circle"
                android:layout_marginStart="30dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left">


                <TextView
                    android:id="@+id/ID_P2_name_inGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Player2_name"
                    android:textColor="@color/myBlack"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="10dp"/>


                <!-- Player 1 Bottom level -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Win_title"
                        android:textColor="@color/myBlack"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:id="@+id/ID_P2_Win_inGame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/P2_Win_count"
                        android:textColor="@color/myBlack"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Draw_title"
                        android:textColor="@color/myBlack"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:id="@+id/ID_P2_Draw_inGame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/P2_Draw_count"
                        android:textColor="@color/myBlack"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="25dp"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>